--- a/public/sass/blocks/_emailList.scss
+++ b/public/sass/blocks/_emailList.scss
@@ -1,54 +1,69 @@
 .emailList{ //Block Email List
   //Mobile styles
   font-size:0;
+  &__list{  /*Element list */
+    @include  rem("font-size",16);
+    width: 30%;
+    display:inline-block;
+    height: 100vh;
+    overflow-y: scroll;
+    border-right: 2px solid black;
+  }
+  &__link{
+    display:block;
+    padding: 20px;
+    border-bottom: 1px solid black;
+    &[data-read="false"] {
+      background-color: rgba(162, 158, 158, 0.33);
+    }
+
+    &[data-read="true"] {
+      display:none;
+    }
+    &.show{
+      display:block;
+    }
+  }
+  &__from{
+    float:left;
+  }
+  &__received{
+    float:right;
+    font-size: 12px;
+  }
+  &__subject{
+    clear:both;
+  }
+  &__item{
+    &--read{
+      padding: 20px;
+      border-bottom-style: dotted;
+      border-bottom: 1px solid black;
+    }
+  }
+  &__content{ /*Element content */
+    margin-left: -2px;
+    @include  rem("font-size",16);
+    padding: 20px;
+    width:70%;
+    display:inline-block;
+    vertical-align: top;
+    &-wrapper{
+      border-bottom:solid 2px black;
+      padding: 20px 5px;
+    }
+    &-subject{
+      font-size: 19px;
+      font-weight: bold;
+      margin-bottom: 20px;
+    }
+    &-body{
+      padding: 20px 5px;
+    }
+  }
+
+
   //Desktop styles
   @media screen and (min-width: $break-large) {
-    &__list{  /*Element list */
-      @include  rem("font-size",16);
-      width: 30%;
-      display:inline-block;
-      height: 100vh;
-      overflow-y: scroll;
-      border-right: 2px solid black;
-    }
-    &__link{
-      display:block;
-      padding: 20px;
-      border-bottom: 1px solid black;
-      &[data-read="false"] {
-        background-color:rgba(162, 158, 158, 0.16);
-      }
-
-      &[data-read="true"] {
-        display:none;
-      }
-      &.show{
-        display:block;
-      }
-    }
-    &__from{
-      float:left;
-    }
-    &__received{
-      float:right;
-    }
-    &__subject{
-      clear:both;
-    }
-    &__item{
-      &--read{
-        padding: 20px;
-        border-bottom-style: dotted;
-        border-bottom: 1px solid black;
-      }
-    }
-    &__content{ /*Element content */
-      margin-left: -2px;
-      @include  rem("font-size",16);
-      padding: 20px;
-      width:70%;
-      display:inline-block;
-      vertical-align: top;
-    }
   }
 }
